<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chess</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="login_user_help_no_user">New Username</string>
    <string name="login_user_help">Username</string>

    <string name="login_pass_help_no_user">New Password</string>
    <string name="login_pass_help">Password</string>

    <string name="xgh">Xemplar Gaming Hub</string>
    <string name="explain">
        You are seeing this screen because you have not accepted Unity\'s privacy policy. Click the button below to read
        and accept their privacy policy.
    </string>
    <string name="view_accept">View and Accept</string>
    <string name="privacy_email">
        By logging into our site or app, or providing your email, you agree our privacy policy as well as Unity Ads\'
        privacy policy. Continued use of our website or app, is a continued agreement by you, the user, to BOTH
        policies. Click on the buttons below to view each policy in your browser. I also acknowledge that if I am under
        the age of 13, I must ask a parent or guardian before playing online, registering an account, or submitting my
        email.
    </string>

    <string name="privacy_xemplar">Xemplar\'s Policy</string>
    <string name="privacy_unity">Unity\'s Policy</string>

    <string name="accept_xemplar">I accept Xemplar Softworks, LLC\'s privacy policy.</string>
    <string name="accept_unity">I accept Unity Technologies\' privacy policy.</string>
    <string name="accept_age">
        I understand that If I am under 13 years old, I must ask permission to play and register.
    </string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="check_for_account">Check for Account</string>

    <string name="loading">Loading…</string>

</resources>
